--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 html {
-  font-size: 120%;
+  height: 125%;
+  font-size: 100%;
   scroll-behavior: smooth;
   font-family: Calibri;
 }
 
 .app {
+  height: 120%;
   color: #fff;
   text-align: center;
   background-color: #fff;
@@ -16,6 +18,7 @@ html {
       -ms-flex-direction: column;
           flex-direction: column;
   background-image: url("https://image.freepik.com/free-photo/amazing-beautiful-sky-with-clouds_58702-1653.jpg");
+  background-position: center;
   background-size: 100% 100%;
 }
 
@@ -51,10 +54,15 @@ html {
   opacity: 0.7;
   background: rgba(255, 255, 255, 0.15) url("https://image.freepik.com/free-photo/amazing-beautiful-sky-with-clouds_58702-1653.jpg");
   background-blend-mode: lighten;
+  color: #fff;
+  font-weight: 300;
+  font-size: 1rem;
   border-radius: 20px;
   padding: 10px;
   width: 15rem;
   outline: none;
+  -webkit-filter: brightness(10px);
+          filter: brightness(10px);
   cursor: pointer;
 }
 
@@ -238,6 +246,30 @@ html {
   margin: 1rem;
 }
 
+.weathercomponent-hourly {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding-top: 0;
+}
+
+.weathercomponent-hourly__rain {
+  font-size: 0.6rem;
+  margin-top: 1rem;
+}
+
+.weathercomponent-hourly__wind {
+  font-size: 0.65rem;
+}
+
+.weathercomponent-hourly__time {
+  margin-top: 0.8rem;
+  font-size: 0.8rem;
+}
+
 .weathercomponent__date {
   font-size: 0.98rem;
 }
@@ -280,8 +312,17 @@ html {
   width: 2.75rem;
 }
 
+.weathercomponent__icon-hourly {
+  margin-left: 0;
+}
+
 .weathercomponent__weathertype {
   font-size: 0.8rem;
+}
+
+.weathercomponent__weathertype-hourly {
+  font-size: 0.7rem;
+  margin-top: 0;
 }
 
 .weathercomponent:hover {
