--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 html {
-  height: 125%;
+  /* height: 125%; */
   font-size: 100%;
   scroll-behavior: smooth;
   font-family: Calibri;
 }
 
 .app {
-  height: 120%;
+  /* height: 120%; */
   color: #fff;
   text-align: center;
   background-color: #fff;
