--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 100%;
+  font-size: 110%;
   scroll-behavior: smooth;
   font-family: Calibri;
   overflow: auto;
@@ -23,7 +23,6 @@ html {
 
 .active {
   color: white !important;
-  background-color: #000 !important;
 }
 
 .header {
@@ -53,7 +52,7 @@ html {
   opacity: 0.6;
   background: rgba(255, 255, 255, 0) url("https://image.freepik.com/free-photo/amazing-beautiful-sky-with-clouds_58702-1653.jpg");
   background-blend-mode: lighten;
-  color: #000 !important;
+  color: white;
   font-weight: 800;
   font-size: 1rem;
   border-radius: 20px;
@@ -75,7 +74,7 @@ html {
 }
 
 .currentweather__location {
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-top: 0.75rem;
 }
 
